deps/v8/test/message/no-legacy-const.out
*%(basename)s:8: SyntaxError: Unexpected token const
const x = 42;
^^^^^

SyntaxError: Unexpected token const
